cabal-version: 3.0
name: hasql-dev
version: 0
stability: experimental
category: Hasql, Database, PostgreSQL
synopsis: Edge of developments for "hasql"
description:
  This is a development version of "[hasql](https://hackage.haskell.org/package/hasql)".
  All experimentation and feature development happens here.
  The API can change drastically.
  For a stable API refer to "[hasql](https://hackage.haskell.org/package/hasql)".

homepage: https://github.com/nikita-volkov/hasql-dev
bug-reports: https://github.com/nikita-volkov/hasql-dev/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2025, Nikita Volkov
license: MIT
license-file: LICENSE
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

source-repository head
  type: git
  location: https://github.com/nikita-volkov/hasql-dev

common base
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedStrings
    ParallelListComp
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedTuples
    ViewPatterns

library
  import: base
  hs-source-dirs: library
  exposed-modules:
    HasqlDev

  other-modules:
    HasqlDev.Prelude

  build-depends:
    base >=4.11 && <5,
    bytestring >=0.10 && <0.14,
    hasql ^>=1.10.1,
    hasql-mapping,
    hasql-pool ^>=1.4,
    hasql-transaction ^>=1.2.0.1,
    text >=1.2 && <3,
    transformers >=0.5 && <0.7,
